--- a/style/index.css
+++ b/style/index.css
@@ -5,6 +5,19 @@
   padding: 0;
   overflow: hidden;
   text-decoration: none;
+  outline: none;
+  -webkit-touch-callout: none;
+  /* iOS Safari */
+  -webkit-user-select: none;
+  /* Safari */
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Old versions of Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
+  /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
 }
 
 main {
@@ -64,8 +77,8 @@ figure img {
 
 h1 {
   color: white;
-  margin-top: 18px;
-  margin-bottom: 14px;
+  margin-top: 25px;
+  margin-bottom: 25px;
   font-family: 'Open Sans', sans-serif;
 }
 
@@ -77,5 +90,11 @@ a {
   padding-left: 50px;
   padding-right: 50px;
   font-family: 'Open Sans', sans-serif;
+  border: solid 1px white;
+}
+
+a:hover {
+  -webkit-box-shadow: inset 0 0 0 1px white;
+          box-shadow: inset 0 0 0 1px white;
 }
 /*# sourceMappingURL=index.css.map */
