--- a/style/desktop.css
+++ b/style/desktop.css
@@ -124,6 +124,15 @@ main {
   height: 100%;
 }
 
+.chrome {
+  display: none;
+  opacity: 0;
+  -webkit-transition: ease 0.3s;
+  transition: ease 0.3s;
+  border-bottom: 3.5px solid #76b9ed;
+  background-color: #353535;
+}
+
 main {
   padding-top: 5px;
   display: -webkit-box;
@@ -140,8 +149,7 @@ main {
   position: relative;
 }
 
-main .folder-wrap {
-  margin-bottom: 20px;
+main a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -159,21 +167,26 @@ main .folder-wrap {
   border: solid 2px transparent;
 }
 
-main .folder-wrap:hover {
+main a:hover {
   background-color: rgba(255, 255, 255, 0.2);
   border: solid 2px rgba(255, 255, 255, 0.2);
 }
 
-main .folder-wrap img {
-  width: 30px;
+main .image-wrap {
+  height: 40px;
 }
 
-main .folder-wrap p {
+main .image-wrap img {
+  max-height: 100%;
+}
+
+main p {
   color: white;
   text-align: center;
   display: inline;
   font-family: sans-serif;
   font-size: 12px;
+  margin-top: 6px;
 }
 
 aside {
@@ -189,4 +202,55 @@ aside {
   -webkit-transition: ease 0.05s;
   transition: ease 0.05s;
 }
-/*# sourceMappingURL=style.css.map */
+
+.folder-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 460px;
+}
+
+iframe {
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+.browser {
+  position: absolute;
+  height: 95%;
+  width: 80%;
+  background-color: white;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  display: none;
+}
+
+.browser header {
+  height: 30px;
+  width: 100%;
+  background-color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-left: 10px;
+}
+
+.browser header img {
+  width: 14px;
+}
+
+.close {
+  color: brown;
+}
+/*# sourceMappingURL=desktop.css.map */
