--- a/style/desktop.css
+++ b/style/desktop.css
@@ -18,6 +18,7 @@
   /* Non-prefixed version, currently
                                   supported by Chrome, Edge, Opera and Firefox */
   cursor: default;
+  -webkit-appearance: none;
 }
 
 html,
