--- a/style/desktop.css
+++ b/style/desktop.css
@@ -193,7 +193,8 @@ main .image-wrap img {
   width: 60%;
   position: absolute;
   bottom: 0;
-  /*transform: translateY(100%);*/
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
   -webkit-transition: ease 0.05s;
   transition: ease 0.05s;
   padding-top: 28px;
