--- a/style/desktop.css
+++ b/style/desktop.css
@@ -278,8 +278,9 @@ main .image-wrap img {
 
 .start .start-folders {
   height: 100%;
-  width: 30%;
+  width: 300px;
   padding-left: 16px;
+  padding-right: 12px;
 }
 
 .start .start-folder-wrap {
@@ -323,11 +324,6 @@ main .image-wrap img {
   display: inline;
   font-family: sans-serif;
   font-size: 12px;
-}
-
-.start .coming-soon {
-  height: 100%;
-  width: 50%;
 }
 
 .folder-wrap {
